--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <%= render 'layouts/navbar' %>
+
+    <div class="ui container">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
