--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,9 @@
 <div class="ui inverted small menu">
   <div class="ui container">
-    <a class="red item active">
-      Chatroom
+    <a class="link item">
+      <%= link_to "Chatroom", chatroom_path, class: "red active item" %>
     </a>
-    <a class="item active">
+    <a class="item">
       Messages
     </a>
     <div class="right menu">
@@ -12,11 +12,13 @@
         <div class="menu">
           <a class="item">Log in</a>
           <a class="item">Log out</a>
-          <a class="item">Sign up</a>
         </div>
       </div>
       <div class="item">
-          <div class="ui primary button">Sign Up</div>
+        <%= link_to "Sign up", signup_path, class: "ui primary button" %>
+      </div>
+      <div class="link item">
+        <%= link_to "About", about_path, class: "ui inverted primary button" %>
       </div>
     </div>
   </div>
