--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,8 +10,11 @@
       <div class="ui dropdown item">
         Account<i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">Log in</a>
-          <a class="item">Log out</a>
+
+          <%= link_to "Log in",   login_path, class: "item" %>
+          <%= link_to "Log out",  logout_path, class: "item",
+                                  data: { "turbo-method": :delete } %>
+
         </div>
       </div>
       <div class="item">
