--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
 <br>
 
 
-<%= form_with(model: @user) do |f| %>
+<%= form_with(model: @user, local: true) do |f| %>
   <div class="ui eight column centered grid">
     <div class="six wide column">
       <div class="ui raised segments">
