--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -29,4 +29,36 @@ display: inline-block;
   height: 450px
 }
 
+/*==================== Pagination ====================*/
+.apple_pagination {
+  background: -webkit-linear-gradient(to right,#efeff1, #e5e5ec);
+  background: -moz-linear-gradient(to right,#efeff1, #e5e5ec);
+  background: linear-gradient(to right,#efeff1, #e5e5ec);
+  border: 0px solid #e5e5e5;
+  text-align: center;
+  padding: 1em;
+  font-size: smaller;
+  cursor: default; }
+  .apple_pagination a, .apple_pagination span {
+    padding: 0.2em 0.3em; }
+  .apple_pagination .disabled {
+    color: #5b5a5a; }
+  .apple_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    background-color: #bebebe;
+    display: inline-block;
+    width: 1.4em;
+    height: 1.4em;
+    line-height: 1.25;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
+    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
+  .apple_pagination a {
+    text-decoration: none;
+    color: black; }
+    .apple_pagination a:hover, .apple_pagination a:focus {
+      text-decoration: underline; }
+
 
