--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,7 @@
             <%= link_to "Log in",   login_path, class: "item" %>
           <% end %>
           <% if logged_in? %>
+            <%= link_to "Edit profile", edit_user_path(current_user), class: "item" %>
             <%= link_to "Log out",  logout_path, class: "item",
                                     data: { "turbo-method": :delete } %>
           <% end %>
